--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -82,6 +82,21 @@
             </div>
             <div class = "leftcolumn">
                 <div class = "card">
+                    <h2>Update 1.10b</h2>
+                    <p>Project Update + Site Update, December 14th, 2020</p>
+                    <h3>Raspbot</h3>
+                    <p>Third attempt at rewiring. The last attempt shorted the Arduino and killed it, and the board since has been replaced. Progress is crawling slowly to allow for additional testing, and adjusting wire slack.</p>
+                    <p>Re-assembly will begin tomorrow, the last test confirmed no wires bridging.</p>
+                    <h3>deargodpleaseno</h3>
+                    <p>Basic project structure produced, this is the first Debian package I've made. Currently writing install and uninstall scripts, then planning to work on item scanning and handling.</p>
+                    <p>The project card on the main page now has a Github repository linked.</p>
+                    <h3>SCHEMA</h3>
+                    <p>Currently experimenting with parsing italic and bold syntax. SCHEMA will support underscore and asterisk notation, as seen <a href = "https://www.markdownguide.org/basic-syntax/#emphasis" target = "_blank">here.</a></p>
+                    <p>Afterwards, link and image support will be worked on, hopefully less complicated.</p>
+                    <h3>Site Updates</h3>
+                    <p>Updated about page.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.10a</h2>
                     <p>Project Update + Site Update, December 3rd, 2020</p>
                     <h3>Raspbot</h3>
