--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
            <div class = "column">
                 <div class = "card">
                     <h3>deargodpleaseno</h3>
-                    <p>Tool for hosting, managing, and seeing access of, temporary files on an Apache server.</p>
+                    <p>CLI tool for hosting and managing temporary files on an Apache server. Add, set and forget.</p>
                     <p>Install through a Debian package, the installation will create a directory in your webroot for temporary files.</p>
-                    <p><i>Remote repository hasn't been created yet, page unavailable.</i></p>
-                    <a class = "button disabled" href = "https://github.com/perpetualCreations/deargodpleaseno" target = "_blank" style = "margin-top:10px">Github</a>
+                    <p>Run using command line. Project software is available on GIthub, please see documentation for more details on usage.</p>
+                    <a class = "button" href = "https://github.com/perpetualCreations/deargodpleaseno" target = "_blank" style = "margin-top:10px">Github</a>
                 </div>
             </div>
         </div>
