--- a/html/pleaseno.html
+++ b/html/pleaseno.html
@@ -3,35 +3,30 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Document Removed</title>
+        <title>Error: Gone (410)</title>
         <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/resources/error404-noback-nocolor.png" as="image">
         <link rel="icon" href="/resources/homeIcon-favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <style>
             body {
                 background-color: white;
+                padding-left: 40px;
                 }
             @media screen and (max-width: 900px) {
                   .column {
                     width: 50%;
                   }
-                }S
+                }
         </style>
     </head>
     <body>
         <!-- Okay this isn't funny anymore, this is serious. -->
-        <div style = "text-align: left;">
-            <h1>Document Removed</h1>
-        </div>
-        <img src = "/resources/error404-noback-nocolor.png" style = "height:10%; width:10%;">
-        <p style = "color: dimgray;">[This is not an error, Error Code N/A]</p>
-        <p>The requested page was removed.</p>
-        <p>This could be due to a variety of reasons, however usually is due to the document being outdated or irrelevant. It probably still exists, however any visible link to it is gone.</p>
-        <p>If you would like to make an inquiry, please contact the site maintainer(s).</p>
-        <div class = "footer">
-            <p style = "color: white;">This is not an error.</p>
-            <p class = "footer-text">dreamer's legacy, 2020-2021</p>
-        </div>
+        <h1 style = "text-align: left;">// Error 410, N/A</h1>
+        <h3><i>Client-Side Issue, Gone</i></h3>
+        <hr>
+        <p>Requested resource was removed, and no longer is available. This is not inherently an error.</p>
+        <p>If needed, please open an issue at the Github repository (will require an account), or email skynetserver.god@protonmail.com.</p>
+        <a class = "button" href = "/index.html">Return Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
+        <p class = "footer-text" style = "color: black;padding-top: 50px;">dreamer's legacy, 2020-2021</p>
     </body>
 </html>
