--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -19,11 +19,11 @@
 				}
 			.leftcolumn {   
   				float: left;
-  				width: 60%;
+  				width: 58%;
 				}
 			.rightcolumn {
   				float: right;
-  				width: 38%;
+  				width: 40%;
   				padding-left: 5px;
 				}
 			@media screen and (max-width: 800px) {
@@ -81,6 +81,20 @@
                 </div>
             </div>
             <div class = "leftcolumn">
+                <div class = "card">
+                    <h2>Update 1.11</h2>
+                    <p>Project Update + Site Update, December 21st, 2020</p>
+                    <h3>Raspbot</h3>
+                    <p>Several days ago, during testing, the L7805CV IC used for stepping down 11.1 volts of battery voltage down to 5 volts of supply voltage blew apart. No damage was done to any other components, the battery, microcontroller, and other components unscathed.</p>
+                    <p>The IC is being replaced, a new package shipment arriving tomorrow.</p>
+                    <h3>deargodpleaseno</h3>
+                    <p>Project completed and released. See documentation for installation instructions and usage.</p>
+                    <p>Such documentation was added to the project card.</p>
+                    <h3>Site Updates</h3>
+                    <p>Error pages have been updated and created, for most of the applicable codes between 400-451, and the singular 5XX page for all errors in that range.</p>
+                    <p>Implementation with server configurations will follow soon.</p>
+                    <p>For the distribution of Debian packages from project releases, the site has a personal package archive (PPA) added, allowing users to install, update, and remove releases with apt.</p>
+                </div>
                 <div class = "card">
                     <h2>Update 1.10b</h2>
                     <p>Project Update + Site Update, December 14th, 2020</p>
