--- a/index.html
+++ b/index.html
@@ -123,11 +123,13 @@
             </div>
            <div class = "column">
                 <div class = "card">
+                    <img src = "/projects/dgpn/dgpn-upscaled.png" alt = "DGPN Icon" class = "project-icons">
                     <h3>deargodpleaseno</h3>
-                    <p>CLI tool for hosting and managing temporary files on an Apache server. Add, set and forget.</p>
-                    <p>Install through a Debian package, the installation will create a directory in your webroot for temporary files.</p>
-                    <p>Run using command line. Project software is available on GIthub, please see documentation for more details on usage.</p>
+                    <p>CLI tool for automatically deleting temporary files on an Apache server.</p>
+                    <p>Install through a Debian package, a directory will be created in your webroot for temporary files.</p>
+                    <p>Project software is available on GIthub, please see documentation for more details on usage and installation.</p>
                     <a class = "button" href = "https://github.com/perpetualCreations/deargodpleaseno" target = "_blank" style = "margin-top:10px">Github</a>
+                    <a class = "button" href = "/projects/dgpn/docs.html" style = "margin-top: 10px;">Documentation</a>
                 </div>
             </div>
         </div>
