--- a/projects/abl/docs.html
+++ b/projects/abl/docs.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Documentation for ABL Project.">
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, analyticalblacklight, abl, analyticalblacklight, abl documentation, abl docs">
-        <meta name="author" content="Taian Chen">
+        <meta name="author" content="perpetualCreations">
         <title>ABL Documentation</title>
         <link rel="preload" href="/css/main.css" as="style">
         <link rel="preload" href="/css/schema.css" as="style">
