--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Documentation for Raspbot Project.">
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, raspbot, raspbot rca, raspbot documentation, raspbot docs, raspbot rca docs">
-        <meta name="author" content="Taian Chen">
+        <meta name="author" content="deargodpleaseno">
         <title>Raspbot Documentation</title>
         <link rel="preload" href="/css/main.css" as="style">
         <link rel="preload" href="/css/schema.css" as="style">
