--- a/projects/swbs/docs.html
+++ b/projects/swbs/docs.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Documentation for Raspbot Project.">
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, socket wrapper, socket wrapper python, socket wrapper for byte strings, swbs, swbs docs, swbs documentation">
-        <meta name="author" content="Taian Chen">
+        <meta name="author" content="perpetualCreations">
         <title>SWBS Documentation</title>
         <link rel="preload" href="/css/main.css" as="style">
         <link rel="preload" href="/css/schema.css" as="style">
