--- a/html/error404.html
+++ b/html/error404.html
@@ -3,36 +3,30 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Error: Page Not Found (404)</title>
+        <title>Error: Not Found (404)</title>
         <link rel="preload" href="/css/main.css" as="style">
-        <link rel="preload" href="/resources/error404-noback-nocolor.png" as="image">
         <link rel="icon" href="/resources/homeIcon-favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <style>
             body {
                 background-color: white;
+                padding-left: 40px;
                 }
             @media screen and (max-width: 900px) {
                   .column {
                     width: 50%;
                   }
-                }S
+                }
         </style>
     </head>
     <body>
         <!-- Okay this isn't funny anymore, this is serious. -->
-        <div style = "text-align: left;">
-            <h1>Error, Page not Found.</h1>
-        </div>
-        <img src = "/resources/error404-noback-nocolor.png" style = "height:10%; width:10%;">
-        <p style = "color: dimgray;">HTML Error Code: 404</p>
-        <p>The requested page could not be found, this could be due to a dead or broken link, technical issues, or if you typed the wrong URL.</p>
-        <p>If you are seeing this message constantly or believe this is due to an error please open an issue at the Github repository, or email skynetserver.god@protonmail.com.</p>
-        <p>It's recommended you open a Github issue instead since maintainers will receive an automated message that there is an issue, and will resolve the issue faster.</p>
-        <a class = "button" href = "/index.html">Go to Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/TaianC/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
-        <div class = "footer">
-            <p style = "color: white;">This error was raised by the web service on Skynet Server.</p>
-            <p class = "footer-text">dreamer's legacy, 2020-2021</p>
-        </div>
+        <h1 style = "text-align: left;">// Error 404</h1>
+        <h3><i>Client-Side Issue, Not Found</i></h3>
+        <hr>
+        <p>Requested resource does not exist. Check URL address.</p>
+        <p>If needed, please open an issue at the Github repository (will require an account), or email skynetserver.god@protonmail.com.</p>
+        <a class = "button" href = "/index.html">Return Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
+        <p class = "footer-text" style = "color: black;padding-top: 50px;">dreamer's legacy, 2020-2021</p>
     </body>
 </html>
