--- a/html/siteblog.html
+++ b/html/siteblog.html
@@ -82,6 +82,19 @@
             </div>
             <div class = "leftcolumn">
                 <div class = "card">
+                    <h2>Update 1.11a</h2>
+                    <p>Project Update + Site Update, December 28th, 2020</p>
+                    <h3>Raspbot</h3>
+                    <p>The voltage regulator IC was replaced, however no current flow occurred. Checking battery connection and 5V power source switching relay.</p>
+                    <h3>Lexicon Cognito</h3>
+                    <p>Added project to listing. Still working on page integration.</p>
+                    <h3>Site Updates</h3>
+                    <p>Page JavaScript for collapsibles and random flavortext were moved to separate .js files, and linked instead. Scripting was minified to reduce render time.</p>
+                    <p>Updated flavortext. An extremely important and critical change. Most certainly so, without a doubt. I may or may not have sunk an hour into writing flavortext.</p>
+                    <p>Instead of using free-floating blobs of text, project listings now make use of collapsibles for project status, project notes, and project contents. This organizes information and makes it less intimidating and laborous to read. </p>
+                    <p>Am procrastinating on integrating error pages with web server configurations. No ETC available.</p>
+                </div>
+                <div class = "card">
                     <h2>Update 1.11</h2>
                     <p>Project Update + Site Update, December 21st, 2020</p>
                     <h3>Raspbot</h3>
