--- a/projects/dgpn/docs.html
+++ b/projects/dgpn/docs.html
@@ -107,7 +107,7 @@
                 <li>The project icon is from a clip of Michael Gray Scott from the office, uttering the all-too-famous words, "No god please no!"</li>
                 <li>The project name were the words that exited my mouth after an instructor gave a research project, where the end product could be a webpage.</li>
                 <li>Not wanting to manually remove the page after the assignment was graded, this project was made.</li>
-                <li>This was the first ever project to use Debian packaging as the distribution end-point.</li>
+                <li>This was the first ever project I made to use Debian packaging as the distribution end-product.</li>
                 <h3>End</h3>
                 <p>This is the end of the documentation for the DGPN command and package.</p>
                 <p>If you any inquiries, please contact the project maintainer(s).</p>
